# rust-web3

./: Cargo.toml  search-index.js  source-files.js
examples/: batch.rs  bench.rs  contract.rs  http.rs  ipc.rs  pubsub.rs  simple_log_filter.rs  simple_log_sub.rs  simple_storage.rs  ws.rs
src/: confirm.rs  error.rs  helpers.rs  lib.rs
src/api/: eth.rs  eth_filter.rs  eth_subscribe.rs  internal.rs  mod.rs  net.rs  parity.rs  parity_accounts.rs  parity_set.rs  personal.rs  traces.rs  web3.rs
src/contract/: deploy.rs  error.rs  mod.rs  result.rs  tokens.rs
src/transports/: batch.rs  http.rs  ipc.rs  mod.rs  shared.rs  ws.rs
src/types/: block.rs  bytes.rs  log.rs  mod.rs  parity_node_kind.rs  sync_state.rs  trace_filtering.rs  traces.rs  transaction.rs  transaction_id.rs  transaction_request.rs  uint.rs  work.rs
src/web3/: confirm.rs.html  error.rs.html  helpers.rs.html  lib.rs.html
web3/: all.html  index.html  trait.BatchTransport.html  trait.DuplexTransport.html  trait.Transport.html  type.RequestId.html  type.Result.html
web3/api/: index.html  struct.BaseFilter.html  struct.CreateFilter.html  struct.Eth.html  struct.EthFilter.html  struct.FilterStream.html  struct.Net.html  struct.ParityAccounts.html  struct.ParitySet.html  struct.Personal.html  struct.SubscriptionId.html  struct.SubscriptionStream.html  struct.Traces.html  struct.Web3.html  struct.Web3Api.html  trait.Namespace.html
web3/confirm/: fn.send_raw_transaction_with_confirmation.html  fn.send_transaction_with_confirmation.html  fn.wait_for_confirmations.html  index.html  struct.Confirmations.html  (+2 more)
(+137 files in other folders)
