[package]
name = "web3"
version = "0.6.0"
description = "Ethereum JSON-RPC client."
edition = "2018"
homepage = "https://github.com/tomusdrw/rust-web3"
repository = "https://github.com/tomusdrw/rust-web3"
documentation = "https://docs.rs/web3"
license = "MIT"
keywords = ["jsonrpc", "web3", "ethereum", "rpc", "client"]
authors = ["Tomasz Drwięga <tomasz@parity.io>"]
readme = "README.md"

[dependencies]
arrayvec = "0.4"
base64 = "0.10"
error-chain = "0.12"
ethabi = "6.0"
ethereum-types = "0.4"
futures = "0.1.25"
jsonrpc-core = "10.1"
log = "0.4"
parking_lot = "0.7"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.17"
tokio-timer = "0.1"
url = "1.7"

# Optional deps
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-uds = { version = "0.2", optional = true }
websocket = { version = "0.22", optional = true }

[dev-dependencies]
# For examples
env_logger = "0.6.0"
futures = "0.1.25"
rustc-hex = "1.0"
tokio = "0.1.17"

[features]
default = ["http", "ipc", "ws", "tls"]
# TODO [ToDr] move transports to separate crates
http = ["hyper"]
ipc = ["tokio-uds"]
ws = ["websocket"]
tls = ["hyper-tls", "native-tls"]

[workspace]
